# stock

./: .gitignore  Dockerfile  go.mod  main.go  pyproject.toml
analyze/: dmi.go  kdj.go  m3bs.go  ma.go  macd.go  math.go
crawler/yahoo/: yahoo.go
domain/: data.go
py/: main.py  strategy.py  ta.py
py/pick/: __init__.py  list.py  list_generator.py
py/scripts/: build.sh  docker.sh
