[project]
name = "stock"
version = "0.1.0"
description = ""
authors = [
    {name = "Raymond Chia"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "yfinance (>=0.2.52,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ta-lib (>=0.6.1,<0.7.0)",
    "backtesting (>=0.5.0,<0.6.0)",
    "scipy (>=1.15.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
